--- a/spotify-clone-front/src/app/app.component.html
+++ b/spotify-clone-front/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row height-main-row">
     <div class="d-none d-sm-none d-md-block col-md-3 col-xl-2 navigation pe-2 h-100">
       <app-navigation></app-navigation>
+      <app-library></app-library>
       <!-- navigation et library -->
     </div>
 
