--- a/spotify-clone-front/src/app/app.component.html
+++ b/spotify-clone-front/src/app/app.component.html
@@ -11,6 +11,7 @@
 </div>
 
 <div class="container-fluid pt-3 vh-100">
+
   <div class="row height-main-row">
     <div class="d-none d-sm-none d-md-block col-md-3 col-xl-2 navigation pe-2 h-100">
       <app-navigation></app-navigation>
@@ -25,4 +26,9 @@
       </div>
     </div>
   </div>
+
+  <footer>
+    <app-player class="w-100"></app-player>
+  </footer>
+
 </div>
