--- a/spotify-clone-front/src/app/home/home.component.html
+++ b/spotify-clone-front/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <h1 class="mb-3 mt-3">Good morning</h1>
 <div class="d-flex flex-wrap">
   @for (song of allSongs; track song.publicId) {
-    <app-song-card class="card song-card-background mt-0 mb-4 ms-0 me-4" [song]="song"></app-song-card>
+    <app-song-card class="card song-card-background mt-0 mb-4 ms-0 me-4" [song]="song"
+    (songToPlay$)="onPlaySong($event)"></app-song-card>
   }
 </div>
