--- a/spotify-clone-front/src/app/layout/auth-popup/auth-popup.component.html
+++ b/spotify-clone-front/src/app/layout/auth-popup/auth-popup.component.html
@@ -2,6 +2,6 @@
   <h2 class="mb-4">Start listening now with a free account</h2>
   <div class="h-75 w-100 d-flex flex-column justify-content-center">
     <button (click)="login()" class="btn btn-primary w-100 mb-3" type="button">Login</button>
-    <button (click)="login()" class="btn btn-primary w-100 mb-3" type="button">Sign up</button>
+    <button (click)="login()" class="btn btn-secondary w-100 mb-3" type="button">Sign up</button>
   </div>
 </div>
