--- a/spotify-clone-front/src/app/layout/player/player.component.html
+++ b/spotify-clone-front/src/app/layout/player/player.component.html
@@ -3,6 +3,7 @@
   <div class="song-played d-flex align-items-center">
     @if (currentSong) {
       <app-small-song-card [song]="currentSong"></app-small-song-card>
+      <app-favorite-song-btn [song]="currentSong"></app-favorite-song-btn>
     }
   </div>
 
