--- a/spotify-clone-front/src/app/search/search.component.html
+++ b/spotify-clone-front/src/app/search/search.component.html
@@ -20,8 +20,9 @@
     </div>
   } @else {
     @for (song of songsResult; track song.publicId) {
-      <div class="song-card-background w-100 mb-2 p-2 pe-3 d-flex align-items-center">
+      <div class="song-card-background w-100 mb-2 p-2 pe-3 d-flex align-items-center justify-content-between">
         <app-small-song-card [song]="song" (songToPlay$)="onPlay($event)"></app-small-song-card>
+        <app-favorite-song-btn [song]="song"></app-favorite-song-btn>
       </div>
     }
   }
